Added option for Admin roles to Create Test Data
